--- a/css/styles.css
+++ b/css/styles.css
@@ -22,6 +22,15 @@ ul{
   padding: 0;
 }
 
+.button_1 {
+  height: 37px;
+  background: #e8491d;
+  border: 0px;
+  padding-left: 20px;
+  padding-right: 20px;
+  color: #ffffff
+}
+
 /* Header */
 header{
   background-color: #35424a;
@@ -68,4 +77,67 @@ header .highlight, header .current a{
 header a:hover{
   color: #cccccc;
   font-weight: bold;
+}
+
+/* Showcase */
+#showcase{
+  min-height: 400px;
+  background: url("../img/showcase.jpg") no-repeat 0 -400px;
+  text-align: center;
+  color: #ffffff;
+}
+
+#showcase h1{
+  margin-top: 100px;
+  font-size: 55px;
+  margin-bottom: 10px;
+}
+
+#showcase p{
+  font-size: 20px;
+}
+
+#newsletter{
+  padding: 15px;
+  color: #ffffff;
+  background: #35424a;
+}
+
+/*Newsletter */
+#newsletter h1{
+  float:left;
+}
+
+#newsletter form{
+  float: right;
+  margin-top: 15px;
+}
+#newsletter input[type="email"]{
+  padding: 4px;
+  height: 25px;
+  width: 250px;
+}
+
+/* Boxes */
+#boxes{
+  margin-top: 20px;
+}
+
+#boxes .box{
+  float: left;
+  text-align: center;
+  width: 30%;
+  padding: 10px;
+}
+
+#boxes .box img{
+  width: 90px;
+}
+
+footer{
+  padding: 20px;
+  margin-top: 20px;
+  color:#ffffff;
+  background-color: #e8491d;
+  text-align: center;
 }
