--- a/css/styles.css
+++ b/css/styles.css
@@ -26,8 +26,8 @@ ul{
   height: 37px;
   background: #e8491d;
   border: 0px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
   color: #ffffff
 }
 
@@ -52,7 +52,7 @@ header a{
   color: #ffffff;
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 16px
+  font-size: 19px
 }
 
 header li{
@@ -149,10 +149,24 @@ aside#sidebar{
   margin-top: 10px;
 }
 
+aside#sidebar .quote input, aside#sidebar .quote textarea{
+  width: 90%
+  padding: 5px;
+}
+
 /*Main-col */
 article#main-col{
   float: left;
   width: 65%;
+}
+
+/* Services */
+ul#services li{
+  list-style: none;
+  padding: 20px;
+  border: #cccccc solid 1px;
+  margin-bottom: 5px;
+  background: #e6e6e6;
 }
 
 footer{
